# propagatio

./: .gitignore  config.toml  manage.py  pyproject.toml  render.yaml
charta/: apps.py  export_spreadsheet.py  urls.py  views.py
charta/templates/charta/: index.html
propagatio/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_propagatio.py
